# crypto_bet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  next.config.mjs  tailwind.config.ts
.cursor/rules/: crypto-bet-rule.mdc
app/src/app/: layout.tsx
crypto-bet/app/: .eslintrc.json  PERFORMANCE.md  PERFORMANCE_FINAL_AUDIT.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TEAM_REVIEW_SUMMARY.md  next.config.mjs  package.json  tailwind.config.ts
crypto-bet/program/program/: Anchor.toml
crypto-bet/program/src/: lib.rs
docs/: FINAL_IMPLEMENTATION_SUMMARY.md  FOLDER_ORGANIZATION_ASSESSMENT.md  MIGRATION_AUDIT_FINAL.md  MIGRATION_COMPLETION_SUCCESS.md  PERFORMANCE_FINAL_AUDIT.md  PROJECT_STRUCTURE.md  README.md  SECURITY_AUDIT_FINAL.md  TEAM_REVIEW_SUMMARY.md
poc/: README.md
poc/experiments/: .gitkeep
poc/shared/: .gitkeep
program/: Anchor.toml
program/programs/crypto-bet/: Cargo.toml
program/programs/crypto-bet/src/: lib.rs
public/: README.md
scripts/: README.md  poc-helper.js
scripts/deploy/: pre-deployment-audit.js
scripts/performance/: performance-audit.js
scripts/security/: security-audit.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/logo-demo/: page.tsx
src/app/markets/: layout.tsx  page.tsx
src/app/swap/: layout.tsx
src/assets/fonts/: etna.ts
src/components/landing/: Footer.tsx  HeroSection.tsx  RiskModeSection.tsx  SpeedSection.tsx  ValuePropSection.tsx
src/components/layout/: Header.tsx  NavigationPopover.tsx
src/components/providers/: BettingModeProvider.tsx  (+2 more)
src/lib/: jupiter.ts  performance.ts
(+33 files in other folders)
