[package]
name = "crypto-bet"
version = "0.1.0"
description = "Crypto Bet Solana Program - Dual-Mode Prediction Markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_bet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

